# maker_web

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: ci.yml  publish.yml  rust_tests.yml
benches/: README.md  all_bench.sh  bench.sh  sorry.md
benches/actix_web/: Cargo.toml  main.rs
benches/axum/: Cargo.toml  main.rs
benches/hyper/: Cargo.toml  main.rs
benches/maker_web/: Cargo.toml  main.rs
benches/result/: wrk_actix_web.txt  wrk_axum.txt  wrk_hyper.txt  wrk_maker_web.txt  wrk_rocket.txt
benches/rocket/: Cargo.toml  main.rs
docs/: index.html  script.js  style.css
examples/: README.md  echo.md  echo.rs  hello_world.md  hello_world.rs  multilingual_greeting.md  multilingual_greeting.rs  request_counter.md  request_counter.rs  request_inspector.md  request_inspector.rs  sorry.md
src/: errors.rs  lib.rs  limits.rs
src/http/: query.rs  request.rs  response.rs  types.rs
src/server/: connection.rs  server.rs  server_impl.rs
