[package]
name = "bench_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
# For rustc 1.75
zerofrom = "=0.1.5"
tinystr = "=0.8.0"
indexmap = "=2.11.3"
time = "=0.3.41"
url = "=2.5.4"
potential_utf = "=0.1.0"
litemap = "=0.7.4"
derive_more = "=2.0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = false
debug = false
debug-assertions = false
overflow-checks = false

[[bin]]
name = "bench_actix_web"
path = "main.rs"
