[package]
name = "bench_hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.11.0"
http-body-util = "0.1.3"
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = "0.1.19"
pin-project-lite = "0.2.16"
pretty_env_logger = "0.5.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = false
debug = false
debug-assertions = false
overflow-checks = false

[[bin]]
name = "bench_hyper"
path = "main.rs"
