[package]
name = "bench_maker_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maker_web = { path = "../../" }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
incremental = false
debug = false
debug-assertions = false
overflow-checks = false

[[bin]]
name = "bench_maker_web"
path = "main.rs"
